--- a/src/components/servicePage/index.css
+++ b/src/components/servicePage/index.css
@@ -6,6 +6,11 @@ body {
   overflow-y: auto;
 }
 
+.header-slash {
+  height: 20px;
+  margin-bottom: 40px;
+}
+
 .service-page-container {
   color: white;
   font-family: var(--font-family-2);
@@ -18,10 +23,6 @@ body {
   overflow-x: hidden; /* Hide any overflow */
   min-height: 100vh;
   overflow-y: auto;
-}
-
-.service-page-container h1 {
-  margin-bottom: 40px;
 }
 
 .service-form {
@@ -55,7 +56,7 @@ body {
   padding: 12px;
   border: 1px solid #fff;
   border-radius: 5px;
-  background: rgba(255, 255, 255, 0.2);
+  background: rgb(36, 36, 36);
   color: white;
   transition: border-color 0.3s;
 }
@@ -121,6 +122,7 @@ body {
 }
 
 .service-button {
+  font-family: var(--font-family-2);
   width: 100%;
   max-width: 850px;
   background-color: #a855f7;
