--- a/src/components/manage/manage.css
+++ b/src/components/manage/manage.css
@@ -48,6 +48,7 @@
 
 .button-container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 100px;
