--- a/src/components/dashboard/dashboard.css
+++ b/src/components/dashboard/dashboard.css
@@ -58,12 +58,33 @@
   box-shadow: 0 0 10px black;
 }
 
-.analytics-container {
+/*.analytics-container {
   border-radius: 20px 20px 0 0;
   background: rgba(7, 6, 6, 0.35);
   box-shadow: 0 0px 4px black;
   backdrop-filter: blur(9.6px);
   -webkit-backdrop-filter: blur(9.6px);
+}*/
+
+.analytics-container {
+  height: 100%;
+  border-radius: 20px 20px 0 0;
+  background: rgba(7, 6, 6, 0.35);
+  box-shadow: 0 0px 4px black;
+  backdrop-filter: blur(9.6px);
+  -webkit-backdrop-filter: blur(9.6px);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+}
+
+.chart-wrapper {
+  height: 100%;
+  width: 48%;
+  background: rgba(255, 255, 255, 0.05);
+  border-radius: 10px;
+  overflow: hidden;
 }
 
 .main-content-container {
