--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -13,14 +13,17 @@
 }
 
 .evo__navbar-links_logo {
+  padding-top: 12px;
   margin-right: 35%;
+  display: flex;
+  align-items: center;
 }
 
-.evo__navbar-links_logo p {
-  font-size: 20px;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  color: white;
+.about-image {
+  filter: invert(42%) hue-rotate(180deg) brightness(1.5);
+  background-color: transparent;
+  height: 45px;
+  width: 55px;
 }
 
 .evo__navbar-links_container {
