--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -214,37 +214,40 @@
   font-weight: 800;
 }
 
-.google-signin {
-  height: 45px;
-  margin: 5px 0;
-}
-
-.google-signin button {
-  font-family: var(--font-family-2);
-  height: 100%;
-  width: 100%;
-  border-radius: 5px;
-  border: none;
-  color: #fff;
-  font-size: 18px;
-  font-weight: 500;
-  cursor: pointer;
-  background-color: #9b3bcfd4;
-  transition: background-color 0.2s ease;
-}
-
-.google-signin button:hover {
-  background-color: #9a3bcf;
-}
-
 .error-message {
   color: red;
   font-size: 14px;
   margin-top: 10px;
 }
 
-.google-signin svg {
-  height: 20px;
+.google-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #4285f4;
+  color: white;
+  border: none;
+  border-radius: 2px;
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  padding: 0 12px 0 0;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+.google-btn:hover {
+  background-color: #357ae8;
+}
+.google-icon-wrapper {
+  border-radius: 50%;
+  display: flex;
   align-items: center;
   justify-content: center;
+  background-color: white;
+  margin-right: 12px;
+}
+
+.google-icon-wrapper svg {
+  height: 100%;
+  scale: 0.8;
 }
