--- a/src/components/userpopup/userprofilepopup.css
+++ b/src/components/userpopup/userprofilepopup.css
@@ -10,6 +10,7 @@
   flex-direction: column;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   min-width: 200px;
+  z-index: 9999;
 }
 
 .user-profile-popup .user-info {
