Made changes to the services page

--- a/src/components/dashboard/dashboard.css
+++ b/src/components/dashboard/dashboard.css
@@ -29,6 +29,7 @@
 .sidebar-container h2 {
   color: hsla(0, 0%, 100%, 0.763);
   margin-bottom: 16px;
+  cursor: pointer;
 }
 
 .sidebar-container p {
