--- a/src/pages/Product.css
+++ b/src/pages/Product.css
@@ -39,7 +39,7 @@
   flex-grow: 1;
   padding-top: 20px;
   padding-left: 90px;
-  background-color: #141416;
+  background-color: #191b20;
   overflow-y: auto;
 }
 
