--- a/src/components/dashboard/dashboard.css
+++ b/src/components/dashboard/dashboard.css
@@ -1,10 +1,12 @@
 .dash-container {
-  height: 85vh;
+  height: 100vh;
   padding: 20px;
+  margin-top: -30px;
+  overflow: hidden;
 }
 
 .dash-main-container {
-  height: 100%;
+  height: calc(100% - 40px);
   border-radius: 20px;
   background: rgba(227, 219, 219, 0.16);
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
@@ -13,17 +15,16 @@
   border: 1px solid rgba(227, 219, 219, 0.15);
   display: grid;
   grid-template-columns: 20% 80%;
+  overflow: hidden;
 }
 
 .sidebar-container {
   color: white;
-  padding-top: 20px;
-  padding-left: 40px;
-  padding-right: 40px;
-  padding-bottom: 20px;
+  padding: 20px 40px;
   display: flex;
   flex-direction: column;
   border-radius: 20px 0 0 20px;
+  overflow-y: auto;
 }
 
 .sidebar-container h2 {
@@ -40,7 +41,6 @@
   padding: 10px;
   border-radius: 8px;
   cursor: pointer;
-
   background: rgba(19, 17, 17, 0.16);
   box-shadow: 0 0px 10px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(9.6px);
@@ -55,17 +55,10 @@
 .mainboard-container {
   border-radius: 20px;
   display: grid;
-  grid-template-rows: 30% 70%;
+  grid-template-rows: auto 1fr;
   box-shadow: 0 0 10px black;
+  overflow: hidden;
 }
-
-/*.analytics-container {
-  border-radius: 20px 20px 0 0;
-  background: rgba(7, 6, 6, 0.35);
-  box-shadow: 0 0px 4px black;
-  backdrop-filter: blur(9.6px);
-  -webkit-backdrop-filter: blur(9.6px);
-}*/
 
 .analytics-container {
   height: 100%;
@@ -95,8 +88,8 @@
   backdrop-filter: blur(9.6px);
   -webkit-backdrop-filter: blur(9.6px);
   color: white;
-  padding-left: 40px;
-  padding-top: 20px;
+  padding: 20px 40px;
+  overflow-y: auto;
 }
 
 .main-content-container h2 {
@@ -131,6 +124,157 @@
 }
 
 .cards-container {
-  height: 100%;
+  overflow-y: auto;
+  height: calc(100% - 60px);
+  padding-right: 20px;
   margin-top: 20px;
+}
+
+.top-bar-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.top-bar-container button {
+  font-family: var(--font-family-2);
+  border: none;
+  background: none;
+  color: white;
+  font-size: 16px;
+  background-color: hsl(271, 95%, 60%);
+  padding: 10px 15px;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+}
+
+.top-bar-container button:hover {
+  background-color: hsl(271, 100%, 55%);
+}
+
+.nav-back-container {
+  display: flex;
+  align-items: center;
+}
+
+.back-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 5px;
+  margin-right: 10px;
+}
+
+.back-button svg {
+  height: 25px;
+  width: 25px;
+  fill: white;
+}
+
+.product-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 20px;
+  padding-bottom: 20px;
+}
+
+.product-card {
+  height: 290px;
+  width: 250px;
+  background-color: #212229;
+  border-radius: 20px;
+  box-shadow: 1px 1px 2px black;
+  padding: 10px;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+  display: flex;
+  flex-direction: column;
+}
+
+.product-card:hover {
+  background-color: #1e1f25;
+}
+
+.product-image {
+  border-radius: 20px;
+  height: 120px;
+  box-shadow: 0 0 8px black;
+}
+
+.product-image img {
+  height: 120px;
+  width: 230px;
+  border-radius: 20px;
+  object-fit: cover;
+}
+
+.product-description {
+  padding-top: 10px;
+  padding-left: 10px;
+  display: flex;
+  flex-direction: column;
+  color: white;
+  flex-grow: 1;
+}
+
+.product-description h4 {
+  font-weight: 400;
+  margin-bottom: 5px;
+}
+
+.bus-name {
+  font-size: 12px;
+  color: hsla(0, 0%, 100%, 0.699);
+  margin-bottom: 3px;
+}
+
+.desc {
+  font-size: 10px;
+  font-weight: 300;
+  color: hsla(0, 0%, 100%, 0.699);
+}
+
+.price {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 12px;
+  border-radius: 12px;
+  color: white;
+  height: 40px;
+  width: 80px;
+  border: none;
+  font-weight: 600;
+  font-size: 14px;
+  background-color: #a855f7;
+  box-shadow: 0 0 2px black;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  align-self: flex-start;
+  margin-left: 10px;
+}
+
+.price:hover {
+  background-color: hsl(271, 95%, 60%);
+}
+
+.product-list.loading,
+.product-list.empty-list {
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 67vh;
+  background-color: #212229;
+  border-radius: 20px;
+}
+
+.product-list.empty-list p {
+  font-size: 18px;
+  color: #888;
 }
