--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -163,6 +163,7 @@
 
 .input-box input {
   height: 45px;
+
   width: 100%;
   outline: none;
   font-size: 16px;
@@ -250,4 +251,87 @@
 .google-icon-wrapper svg {
   height: 100%;
   scale: 0.8;
+}
+
+.user-details {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 20px 0 2px 0;
+}
+
+.input-box {
+  margin-bottom: 15px;
+  width: calc(50% - 10px); /* Changed from calc(100% / 2 - 20px) for clarity */
+}
+
+@media (max-width: 768px) {
+  .login__container {
+    height: auto; /* Adjust height for mobile */
+  }
+
+  .login__content {
+    width: 90%;
+    grid-template-columns: 1fr;
+    height: auto;
+    margin-top: 10px;
+
+    box-shadow: none;
+  }
+
+  .login__image {
+    display: none; /* Hide the image on smaller screens */
+  }
+
+  .login__form {
+    width: 100%;
+    right: 0;
+    border-radius: 20px;
+    box-shadow: none;
+    margin-bottom: 10px;
+  }
+
+  .welcome {
+    position: relative;
+    width: 100%;
+    margin-bottom: 20px;
+    height: auto;
+  }
+
+  .text-content {
+    margin: 20px 20px;
+    text-align: center;
+  }
+
+  .user-details {
+    flex-direction: column;
+    margin: 20px 0;
+  }
+
+  .input-box {
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 15px;
+    width: 400px;
+  }
+
+  .button {
+    width: 100%;
+  }
+
+  .google-btn {
+    width: 100%;
+  }
+  .vendor-input {
+    width: 200px !important;
+  }
+  .google-icon {
+    font-size: 20px;
+    background-color: #fff;
+    border-radius: 50%;
+    margin-right: 5px;
+  }
+  .sign-paragraph {
+    font-size: 15px !important;
+  }
 }
