--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -4,6 +4,45 @@
   align-items: center;
   padding: 2rem 6rem;
 }
+.vendor-nav {
+  background-color: transparent;
+}
+.nav-link p {
+  font-family: var(--font-family-2);
+  color: #fff;
+  margin-right: 15px;
+  font-size: 18px;
+}
+.navbar-toggler {
+  border: none;
+}
+
+.hamburger-icon {
+  font-size: 30px;
+  color: white;
+}
+#navbarNav {
+  margin-top: 12px;
+}
+
+.nav-item button {
+  padding: 0.5rem 1rem;
+  color: #fff;
+  background-color: hsla(130, 55%, 45%, 0.849);
+  font-family: var(--font-family);
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 25px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.5s ease;
+}
+
+.nav-item button:hover {
+  background-color: #33b249;
+}
 
 .evo__navbar-links {
   flex: 1;
@@ -44,25 +83,6 @@
   margin: 0 1rem;
   cursor: pointer;
   transition: color 0.5s ease;
-}
-
-.evo__navbar-links_container button {
-  padding: 0.5rem 1rem;
-  color: #fff;
-  background-color: hsla(130, 55%, 45%, 0.849);
-  font-family: var(--font-family);
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 25px;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  border-radius: 5px;
-  transition: background-color 0.5s ease;
-}
-
-.evo__navbar-links_container button:hover {
-  background-color: #33b249;
 }
 
 .evo__navbar-links_container p:hover {
