--- a/src/components/productcard/productcard.css
+++ b/src/components/productcard/productcard.css
@@ -188,11 +188,11 @@
 }
 
 .product-card {
+  font-family: var(--font-family-2);
   height: 290px;
   width: 250px;
   background-color: #212229;
   border-radius: 20px;
-  box-shadow: 1px 1px 2px black;
   padding: 10px;
   cursor: pointer;
   transition: background-color 0.2s ease;
@@ -227,7 +227,8 @@
 }
 
 .product-description h4 {
-  font-weight: 400;
+  font-size: 20px;
+  font-weight: 500;
   margin-bottom: 5px;
 }
 
@@ -250,8 +251,8 @@
   margin-top: 12px;
   border-radius: 12px;
   color: white;
-  height: 40px;
-  width: 80px;
+  height: 50px;
+  width: 100px;
   border: none;
   font-weight: 600;
   font-size: 14px;
@@ -261,6 +262,7 @@
   transition: background-color 0.3s ease;
   align-self: flex-start;
   margin-left: 10px;
+  margin-bottom: 20px;
 }
 
 .price:hover {
