--- a/src/components/adminnavbar/adminnavbar.css
+++ b/src/components/adminnavbar/adminnavbar.css
@@ -49,7 +49,7 @@
 .evo__navbar-links_container button {
   padding: 0.5rem 1rem;
   color: #fff;
-  background-color: hsla(130, 55%, 45%, 0.849);
+  background-color: #9a3bcf;
   font-family: var(--font-family);
   font-weight: 500;
   font-size: 18px;
