--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -28,7 +28,7 @@
 .nav-item button {
   padding: 0.5rem 1rem;
   color: #fff;
-  background-color: hsla(130, 55%, 45%, 0.849);
+  background-color: #9a3bcf;
   font-family: var(--font-family);
   font-weight: 500;
   font-size: 18px;
@@ -41,7 +41,7 @@
 }
 
 .nav-item button:hover {
-  background-color: #33b249;
+  background-color: #a600ff;
 }
 
 .evo__navbar-links {
