--- a/src/components/loader/loader.css
+++ b/src/components/loader/loader.css
@@ -1,39 +1,25 @@
-.loader-container {
+.loader-container-1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 9999;
+
 }
 
 .loader {
-  width: 100px;
-  height: 100px;
-  animation: spin 2s cubic-bezier(0.68, -0.55, 0.27, 1.55) infinite;
-}
-
-.loader img {
-  width: 100%;
-  height: 100%;
+  border: 8px solid #f3f3f3; /* Light grey */
+  border-top: 8px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  animation: spin 1s linear infinite;
 }
 
 @keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-.about-image {
-  /* filter: invert(42%) hue-rotate(180deg) brightness(1.5); */
-  background-color: transparent;
-  height: 45px;
-  width: 55px;
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
