--- a/src/components/servicePage/index.css
+++ b/src/components/servicePage/index.css
@@ -141,6 +141,83 @@ body {
   transform: translateY(-2px);
 }
 
+.popup-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.service-added-popup {
+  background-color: rgb(31, 31, 31);
+  color: white;
+  padding: 2rem;
+  border-radius: 0.5rem;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  max-width: 90%;
+  width: 400px;
+}
+
+.popup-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 1rem;
+}
+
+.popup-content svg {
+  color: #953bea;
+}
+
+.checkmark-icon {
+  width: 2rem;
+  height: 2rem;
+  background-color: white;
+  border-radius: 50%;
+  margin-bottom: 0.5rem;
+}
+
+.popup-text {
+  font-weight: 600;
+  font-size: 1.2rem;
+}
+
+.close-button {
+  display: flex;
+  background-color: white;
+  color: black;
+  border: none;
+  padding: 0.5rem 1rem;
+  border-radius: 0.25rem;
+  cursor: pointer;
+  font-weight: 600;
+}
+
+.close-button:hover {
+  background-color: #f0fff4;
+}
+
+.service-page-container.blurred > *:not(.popup-overlay) {
+  filter: blur(5px);
+}
+
+.close-button-container {
+  display: flex;
+  justify-content: center;
+}
+
+.service-spinner-loader {
+  display: flex;
+  justify-content: center;
+}
+
 /* Responsive Styles */
 @media (max-width: 768px) {
   .service-form {
